# ComfyUI-Artist-Selector

./: README.md  __init__.py  artist_csv_loader.py  pyproject.toml
.github/workflows/: publish.yml
CSV/: 1000SingleArtist.csv  300MixedArtists.csv
